# otus_hw7

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dependencies.cmake
tests/: list_test.cpp  vector_test.cpp
